--- a/AlzheiGames/app/src/main/AndroidManifest.xml
+++ b/AlzheiGames/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PrincipalActivity"></activity>
+        <activity android:name=".CuidadorActivity"></activity>
+        <activity android:name=".MedicoActivity" />
+        <activity android:name=".PacienteActivity" />
+        <activity android:name=".PrincipalActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
