--- a/AlzheiGames/app/src/main/AndroidManifest.xml
+++ b/AlzheiGames/app/src/main/AndroidManifest.xml
@@ -11,7 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CuidadorActivity"></activity>
+        <activity android:name=".RegistroCuidadorActivity"></activity>
+        <activity android:name=".RegistroMedicoActivity" />
+        <activity android:name=".MenuRegistroActivity" />
+        <activity android:name=".RegistroPacienteActivity" />
+        <activity android:name=".CuidadorActivity" />
         <activity android:name=".MedicoActivity" />
         <activity android:name=".PacienteActivity" />
         <activity android:name=".PrincipalActivity" />
