--- a/AlzheiGames/app/src/main/AndroidManifest.xml
+++ b/AlzheiGames/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RegistroCuidadorActivity"></activity>
+        <activity android:name=".AsistenciaActivity"></activity>
+        <activity android:name=".MenuJuegosActivity" />
+        <activity android:name=".RegistroCuidadorActivity" />
         <activity android:name=".RegistroMedicoActivity" />
         <activity android:name=".MenuRegistroActivity" />
         <activity android:name=".RegistroPacienteActivity" />
